--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                             <div class="image-card-footer">
                                 <div class="image-card-actions">
                                     <button class="btn btn-secondary image-action-btn copy-img-btn">Copy</button>
-                                    <a href="${imgSrc}" download="${image.id}.${extension}" class="btn btn-secondary image-action-btn">Download</a>
+                                    <a href="${imgSrc}" download="${crypto.randomUUID()}.${extension}" class="btn btn-secondary image-action-btn">Download</a>
                                 </div>
                             </div>`;
                         card.querySelector('.copy-img-btn').onclick = async (e) => {
